; ModuleID = '/home/carl/AnghaBench/libevent/extr_event.c_event_callback_activate_later_nolock_.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_event.c_event_callback_activate_later_nolock_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.event_base = type { i32 }
%struct.event_callback = type { i32 }

@EVLIST_ACTIVE = common dso_local global i32 0, align 4
@EVLIST_ACTIVE_LATER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @event_callback_activate_later_nolock_(%struct.event_base* %0, %struct.event_callback* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.event_base*, align 8
  %5 = alloca %struct.event_callback*, align 8
  store %struct.event_base* %0, %struct.event_base** %4, align 8
  store %struct.event_callback* %1, %struct.event_callback** %5, align 8
  %6 = load %struct.event_callback*, %struct.event_callback** %5, align 8
  %7 = getelementptr inbounds %struct.event_callback, %struct.event_callback* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @EVLIST_ACTIVE, align 4
  %10 = load i32, i32* @EVLIST_ACTIVE_LATER, align 4
  %11 = or i32 %9, %10
  %12 = and i32 %8, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %26

15:                                               ; preds = %2
  %16 = load %struct.event_base*, %struct.event_base** %4, align 8
  %17 = load %struct.event_callback*, %struct.event_callback** %5, align 8
  %18 = call i32 @event_queue_insert_active_later(%struct.event_base* %16, %struct.event_callback* %17)
  %19 = load %struct.event_base*, %struct.event_base** %4, align 8
  %20 = call i64 @EVBASE_NEED_NOTIFY(%struct.event_base* %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %15
  %23 = load %struct.event_base*, %struct.event_base** %4, align 8
  %24 = call i32 @evthread_notify_base(%struct.event_base* %23)
  br label %25

25:                                               ; preds = %22, %15
  store i32 1, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %14
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @event_queue_insert_active_later(%struct.event_base*, %struct.event_callback*) #1

declare dso_local i64 @EVBASE_NEED_NOTIFY(%struct.event_base*) #1

declare dso_local i32 @evthread_notify_base(%struct.event_base*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
